# PySimplicialCubature

./: .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.rst
pysimplicialcubature/: requirements.txt  simplicialcubature.py
tests/: test_function.py  test_polynomial.py  test_polynomialQQ.py
