[tool.poetry]
name = "pysimplicialcubature"
version = "0.1.0"
description = "Integration on simplices."
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
sympy = "^1.11.1"
sphinx = { version = "^5.3.0", optional = true }
sphinx-rtd-theme = { version = "^1.1.1", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
